refactor: complete strict DDD tactical layering migration